editors/tree-sitter-wirescript/grammar.js
    source_file: ($) => repeat($._top_level_item),

    // `import`, `type` and `fn` are accepted only at the top level by
    // `parse_top_decl`; `parse_stmt` does not handle them.
    _top_level_item: ($) =>
      seq(
        choice(
          $.import_declaration,
          $.type_alias_declaration,
          $.function_declaration,
          $._statement,
        ),
        // `eat_stmt_end` treats `;` and newline as interchangeable, optional
        // statement terminators.
        optional(';'),
      ),

    _block_statement: ($) => seq($._statement, optional(';')),

    doc_comment: (_$) => token(prec(1, seq('///', /[^\n]*/))),
    line_comment: (_$) => token(seq('//', /[^\n]*/)),
    // NOTE: the reference lexer nests block comments; a regex cannot.
    block_comment: (_$) => token(seq('/*', /[^*]*\*+([^/*][^*]*\*+)*/, '/')),

    // ------------------------------------------------------------- annotations

    // The lexer emits `@word` as a single token, so `@` and the word must be
    // adjacent. `@label` additionally takes a parenthesised string.
    _annotations: ($) => repeat1($.annotation),

    // ------------------------------------------------------------------ import

    let_declaration: ($) =>
      seq(
        optional($._annotations),
        'let',
        field('name', choice($.identifier, $.record_pattern, $.tuple_pattern)),
        optional(seq(':', field('type', $._type))),
        optional(
          seq(
            '=',
            field(
              'value',
              choice($._expression, $.event_source, $.await_expression),
            ),
          ),
        ),
      ),

    // `on Trigger` / `on Trigger { captured body }` as a `let` initialiser.
    // Unlike a handler, `parse_let_decl` calls `parse_trigger` directly, so the
    // trigger here is the restricted trigger grammar — never a call.
    handler: ($) =>
      seq(
        optional($._annotations),
        'on',
        field('trigger', $._handler_trigger),
        field('body', $.block),
      ),

    // `parse_handler` accepts either a simple trigger or, via
    // `looks_like_expr_trigger`, an arbitrary expression. A simple trigger is
    // itself a valid expression (idents, `.field`, `!`, `|`, parens, and the
    // arg list as a call), so one expression rule covers both.
    _handler_trigger: ($) =>
      choice($._expression_no_brace, $._if_expression_no_brace),

    // ------------------------------------------------------------- statements

    block: ($) => seq('{', repeat($._block_statement), '}'),

    assignment_statement: ($) =>
      seq(
        field('left', $._expression_no_brace),
        field(
          'operator',
          choice(
            '=',
            '+=',
            '-=',
            '*=',
            '/=',
            '%=',
            '&=',
            '|=',
            '^=',
            '<<=',
            '>>=',
          ),
        ),
        field('right', $._expression),
      ),

    // Lower precedence than the postfix operators so that a `(`, `[` or `.`
    // starting the next line keeps extending the expression, which is what the
    // reference parser's `parse_postfix` loop does.
    _type: ($) => choice($._type_postfix, $.union_type),

    _expression: ($) =>
      choice(
        $._expression_no_brace,
        $.record_literal,
        $.block_expression,
        $.if_expression,
      ),

    // Everything that cannot begin with `{` and cannot be an `if … then … else`.
    // Used wherever a `{` immediately following the expression opens a block
    // (`if`, `on`, statement position).
    _expression_no_brace: ($) =>
      choice(
        $.identifier,
        $.integer,
        $.float,
        $.string,
        $.boolean,
        $.array_literal,
        $.asset_reference,
        $.prefab_reference,
        $.parenthesized_expression,
        $.tuple_expression,
        $.unary_expression,
        $.reference_expression,
        $.dereference_expression,
        $.unsafe_expression,
        $.binary_expression,
        $.variant_test,
        $.call_expression,
        $.field_expression,
        $.tuple_index_expression,
        $.index_expression,
      ),

    parenthesized_expression: ($) => seq('(', $._expression, ')'),

    tuple_expression: ($) =>
      seq(
        '(',
        $._expression,
        ',',
        optional(
          seq($._expression, repeat(seq(',', $._expression)), optional(',')),
        ),
        ')',
      ),

    unary_expression: ($) =>
      prec.right(
        PREC.unary,
        seq(field('operator', choice('-', '!', '~')), field('argument', $._expression)),
      ),

    // `&x` and `ref x` both take a reference.
    reference_expression: ($) =>
      prec.right(
        PREC.unary,
        seq(field('operator', choice('&', 'ref')), field('argument', $._expression)),
      ),

    dereference_expression: ($) =>
      prec.right(PREC.unary, seq('*', field('argument', $._expression))),

    // `unsafe <value>.<Variant>.<field>`, an unchecked enum payload access.
    // An ordinary prefix operator over a whole postfix chain, like `-` and
    // `&`: unary binds looser than postfix, so the projection is complete
    // before the marker wraps it and the access never splits across two nodes.
    //
    // KNOWN DIVERGENCE from the compiler, which treats `unsafe` as a
    // CONTEXTUAL keyword (it opens this form only when an identifier follows,
    // so `var unsafe: int` still compiles). Tree-sitter decides keyword versus
    // identifier in the lexer, which has no lookahead, so here the word is
    // always the marker and a variable named `unsafe` parses as an error.
    // Matching the compiler would need an external scanner; the name is not
    // worth one. The compiler remains the authority on what compiles.
    unsafe_expression: ($) =>
      prec.right(
        PREC.unary,
        seq('unsafe', field('argument', $._expression)),
      ),

    // `<value> is <Enum>.<Variant>`, the enum variant test. It binds like
    // `==`, and its right side is a path alone, so `e is E.A && b` groups as
    // `(e is E.A) && b` and `e is E.A + 1` as `(e is E.A) + 1`, matching the
    // reference parser.
    //
    // KNOWN DIVERGENCE from the compiler, which treats `is` as a CONTEXTUAL
    // keyword (only `is <name>` opens the form, so `var is: int` still
    // compiles), for the same lexer reason as `unsafe_expression` above.
    variant_test: ($) =>
      prec.left(
        PREC.equality,
        seq(
          field('value', $._expression),
          'is',
          field('variant', $.variant_path),
        ),
      ),

    // The `Enum.Variant` path after `is`, its own rule rather than a reused
    // `field_expression`: the dots bind tighter than anything around them, so
    // there is exactly one way to read `e is E.A` and the path cannot end
    // early and leave `.A` to project the test's own result.
    variant_path: ($) =>
      prec.right(
        PREC.postfix + 1,
        seq($.identifier, repeat1(seq('.', $.identifier))),
      ),

    binary_expression: ($) => {
      const table = [
        [PREC.or, choice('||', '^^')],
        [PREC.and, '&&'],
        [PREC.bitor, '|'],
        [PREC.bitxor, '^'],
        [PREC.bitand, '&'],
        [PREC.equality, choice('==', '!=')],
        [PREC.comparison, choice('<', '<=', '>', '>=')],
        [PREC.shift, choice('<<', '>>')],
        [PREC.additive, choice('+', '-', '..')],
        [PREC.multiplicative, choice('*', '/', '%')],
      ];
      return choice(
        ...table.map(([precedence, operator]) =>
          prec.left(
            /** @type {number} */ (precedence),
            seq(
              field('left', $._expression),
              field('operator', operator),
              field('right', $._expression),
            ),
          ),
        ),
        // `**` is the only right-associative operator.
        prec.right(
          PREC.power,
          seq(
            field('left', $._expression),
            field('operator', '**'),
            field('right', $._expression),
          ),
        ),
      );
    },

    call_expression: ($) =>
      prec(
        PREC.postfix,
        seq(
          field('function', $._expression),
          field('arguments', $.argument_list),
        ),
      ),

    argument_list: ($) =>
      seq(
        '(',
        commaSepTrailing(
          choice($.named_argument, $.spread_argument, $._expression),
        ),
        ')',
      ),

    named_argument: ($) =>
      seq(field('name', $.identifier), '=', field('value', $._expression)),

    spread_argument: ($) => seq('...', $._expression),

    field_expression: ($) =>
      prec(
        PREC.postfix,
        seq(field('object', $._expression), '.', field('field', $.identifier)),
      ),

    // `pair.0` — `.` followed by an integer.
    tuple_index_expression: ($) =>
      prec(
        PREC.postfix,
        seq(field('object', $._expression), '.', field('index', $.integer)),
      ),

    index_expression: ($) =>
      prec(
        PREC.postfix,
        seq(
          field('object', $._expression),
          '[',
          field('index', $._expression),
          ']',
        ),
      ),

    if_expression: ($) =>
      prec.right(
        seq(
          'if',
          field('condition', $._expression_no_brace),
          'then',
          field('consequence', $._expression),
          'else',
          field('alternative', $._expression),
        ),
      ),

    // Same node, but the `else` branch cannot be (or end in) a `{…}`, so a
    // following `{` reliably opens a block. Needed for `on if c then a else b {`
    // — `looks_like_expr_trigger` sends a `if`-led trigger through `parse_expr`.
    // The alternative recurses into this variant so `else if … then … else …`
    // chains still work.
    block_expression: ($) =>
      seq('{', repeat($._block_statement), field('value', $._expression), '}'),

    // `{ a: 1, b, ...rest }`. `{}` cannot be a `block_expression` (which needs
    // a trailing value), and `{ a }` is disambiguated by `shorthand_field`.
    record_literal: ($) =>
      seq(
        '{',
        commaSepTrailing(
          choice($.record_field, $.shorthand_field, $.spread_field),
        ),
        '}',
      ),

    record_field: ($) =>
      seq(field('name', $.identifier), ':', field('value', $._expression)),

    // `{ x }` is a shorthand record field, not a block expression whose value
    // is `x` — this mirrors `looks_like_record_lit` in the reference parser.
    // Only reachable with `,`/`}` lookahead, so `{ x + 1 }` stays a block.
    shorthand_field: ($) => prec(1, field('name', $.identifier)),

    spread_field: ($) => seq('...', field('value', $._expression)),

    array_literal: ($) =>
      seq('[', commaSepTrailing(choice($.spread_element, $._expression)), ']'),

    spread_element: ($) => seq('...', $._expression),

    // ---------------------------------------------------------------- literals

    identifier: (_$) => /[a-zA-Z_][a-zA-Z0-9_]*/,

    boolean: (_$) => choice('true', 'false'),

    integer: (_$) =>
      token(
        choice(
          /0[xX][0-9a-fA-F_]+/,
          /0[bB][01_]+/,
          /0[oO][0-7_]+/,
          /[0-9][0-9_]*/,
        ),
      ),

    float: (_$) =>
      token(
        choice(
          seq(
            /[0-9][0-9_]*/,
            '.',
            /[0-9][0-9_]*/,
            optional(seq(/[eE]/, optional(/[+-]/), /[0-9]+/)),
          ),
          seq(/[0-9][0-9_]*/, /[eE]/, optional(/[+-]/), /[0-9]+/),
        ),
      ),

    // `$AssetType/AssetName`
    asset_reference: (_$) =>
      token(seq('$', /[a-zA-Z_][a-zA-Z0-9_\-.]*\/[a-zA-Z0-9_\-./]*/)),

    // `$./rel/file.brz` or `$/abs/file.brz`
    prefab_reference: (_$) => token(seq('$', /[./][a-zA-Z0-9_\-./]*/)),

    string: ($) =>
      choice(
        seq(
          '"',
          repeat(
            choice(
              alias($._double_quoted_fragment, $.string_fragment),
              alias(token.immediate('$'), $.string_fragment),
              $.escape_sequence,
              $.interpolation,
            ),
          ),
          '"',
        ),
        seq(
          "'",
          repeat(
            choice(
              alias($._single_quoted_fragment, $.string_fragment),
              alias(token.immediate('$'), $.string_fragment),
              $.escape_sequence,
              $.interpolation,
            ),
          ),
          "'",
        ),
      ),

    _double_quoted_fragment: (_$) => token.immediate(prec(1, /[^"\\$\n]+/)),
    _single_quoted_fragment: (_$) => token.immediate(prec(1, /[^'\\$\n]+/)),

    escape_sequence: (_$) => token.immediate(seq('\\', /./)),

    // `${ expr }` — the reference lexer captures the raw slice and re-parses it.
    interpolation: ($) => seq(token.immediate('${'), $._expression, '}'),
  },
});

function commaSep1(rule) {
  return seq(rule, repeat(seq(',', rule)));
}

function commaSepTrailing(rule) {
  return optional(seq(commaSep1(rule), optional(',')));
}
